<resources>
    <string name="app_name">IngrediScan</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_scan">Scan</string>
    <string name="title_previous_results">Previous Results</string>
    <string name="title_profile">Profile</string>
    <string name="LearnMore_underlined"><u>Learn more</u></string>
    <string name="SeeAll_underlined">View All</string>
    <string name="log_a_meal">Log A Meal</string>
    <string name="ingrediscan">IngrediScan</string>
    <string name="subHeader">Nutrition transparency at your fingertips</string>
    <string name="calories_tracked_today">Calories Tracked Today</string>
    <string name="latest_food">Latest Food</string>
    <string name="food_item_1_200_cal">Food Item 1 - 200 cal</string>
    <string name="food_item_2_300_cal">Food Item 2 - 300 cal</string>
    <string name="food_item_3_223_cal">Food Item 3 - 223 cal</string>
    <string name="food_item_4_400_cal">Food Item 4 - 400 cal</string>
    <string name="tutorial">Tutorial</string>
    <string name="log_a_meal_for_breakfast">Log A Meal for Breakfast</string>
    <string name="Plus_Icon">+</string>
    <string name="log_a_meal_for_lunch">Log A Meal for Lunch</string>
    <string name="PlusIcon">+</string>
    <string name="log_a_meal_for_dinner">Log A Meal for Dinner</string>
    <string name="log_a_meal_for_snack">Log A Meal for Snack</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="read_more">Read more</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_weight">Weight: 0.00 LBS</string>
    <string name="profile_height">Height: 0 00</string>
    <string name="profile_age">Age: 00 years</string>
    <string name="profile_sex">Sex: N/A</string>
    <string name="profile_activity_level">Activity Level: N/A</string>
    <string name="profile_BMI">BMI: </string>
    <string name="profile_banner">Profile Banner</string>
    <string name="profile_suggested_calories">Suggested Calories</string>
    <string name="title_search_to_log_a_meal">Search To Log A Meal</string>
    <string name="profile_change_password">Change Password</string>
    <string name="create_account">Create Account</string>
    <string name="fullname">Full Name</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="Email">Email</string>
</resources>