<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!--
    <TextView
        android:id="@+id/appName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ingrediscan"
        android:textColor="#4CAF50"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="TextContrastCheck" />
    -->

    <ImageView
        android:id="@+id/profileBanner"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_banner"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/profileButtonImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_profile_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/profileButtonWeight"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="264dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileButtonHeight"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButtonWeight" />

    <Button
        android:id="@+id/profileButtonAge"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButtonHeight" />

    <Button
        android:id="@+id/profileButtonSex"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButtonAge" />

    <Button
        android:id="@+id/profileButtonActivityLevel"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_activity_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButtonSex" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bmiBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="574dp"
        android:background="@drawable/cornered_box_background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bmiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_BMI"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/caloricSuggestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_suggested_calories"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmiText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/profileButtonPassword"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiBox" />


</androidx.constraintlayout.widget.ConstraintLayout>