<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fugazone_regular"
            android:text="@string/ingrediscan"
            android:textColor="@color/green"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/subHeader"
            android:fontFamily="@font/satoshi_bold"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName" />

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_box_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingBottom="20dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_box_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingBottom="20dp"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="270dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/fugazone_regular"
            android:maxWidth="200dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:backgroundTint="@color/green"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_account"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignup"
            android:layout_width="270dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/fugazone_regular"
            android:text="@string/signup"
            android:textColor="@color/green"
            android:textSize="30sp"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="30dp"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>